--- a/app/views/customer/shared/_header.html.erb
+++ b/app/views/customer/shared/_header.html.erb
@@ -108,7 +108,7 @@
               <!--<li><a href="/products">Products</a></li>-->
               <!--<li><a href="/services">Services</a></li>-->
               <% @categories.each do |category| %>
-                  <li><a href="javascript:void(0)"><%= category.name %></a>
+                  <li><a href="<%= category_path(category) %>"><%= category.name %></a>
                     <div class="dropdown-menu-category-section">
                       <div class="dropdown-menu-category-section-inner">
                         <div class="dropdown-menu-category-section-content">
