--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -95,7 +95,7 @@
               <!--<li><a href="/products">Products</a></li>-->
               <!--<li><a href="/services">Services</a></li>-->
               <% @categories.each do |category| %>
-                  <li><a href="javascript:void(0)"><%= category.name %></a>
+                  <li><a href="<%= category_path(category)%>"><%= category.name %></a>
                     <div class="dropdown-menu-category-section">
                       <div class="dropdown-menu-category-section-inner">
                         <div class="dropdown-menu-category-section-content">
@@ -155,7 +155,8 @@
               <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
           <% else %>
               <li class="dropdown">
-                <a href="#nav-account-dialog" data-effect="mfp-move-from-top" class="popup-text">Start</a>
+                <!--<a href="#nav-account-dialog" data-effect="mfp-move-from-top" class="popup-text">Start</a>-->
+                <a href="javascript:void(0)">Start</a>
                 <ul class="dropdown-menu dropdown-menu-shipping-cart">
                   <li>
                     <a href="#nav-login-dialog" class="popup-text">Login</a>
