--- a/app/views/customer/enquiries/show.html.erb
+++ b/app/views/customer/enquiries/show.html.erb
@@ -13,6 +13,12 @@
             </div>
             <div class="col-sm-12">
               <div class="product-detail">
+                <h4>Status</h4>
+                <p><%= @enquiry.status %></p>
+              </div>
+            </div>
+            <div class="col-sm-12">
+              <div class="product-detail">
                 <h4>Enquiry by:</h4>
                 <p><%= @enquiry.user.email %></p>
               </div>
@@ -60,7 +66,7 @@
                     <p><%= @enquiry.description %><br></p>
                   </div>
 
-                  <% if @enquiry.status == 'Quoted' and @enquiry.product.user_id == current_user.id %>
+                  <% if @enquiry.status == 'Quoted' and @enquiry.user_id == current_user.id %>
                       <%= link_to( 'Deal' , deal_customer_enquiry_path(@enquiry, deal: true), method: :put, class: 'btn btn-primary') %>
                       <%= link_to( 'No-Deal' , deal_customer_enquiry_path(@enquiry, deal: false), method: :put, class: 'btn btn-danger') %>
                   <%- end %>
@@ -93,6 +99,12 @@
               <div class="product-detail">
                 <h4>Service description:</h4>
                 <p><%= @enquiry.service.service_description %></p>
+              </div>
+            </div>
+            <div class="col-sm-12">
+              <div class="product-detail">
+                <h4>Status</h4>
+                <p><%= @enquiry.status %></p>
               </div>
             </div>
             <div class="col-sm-12">
@@ -149,7 +161,7 @@
                   <h4>Description:</h4>
                   <p><%= @enquiry.description %><br></p>
                 </div>
-                <% if @enquiry.status == 'Quoted' and @enquiry.service.user_id == current_user.id %>
+                <% if @enquiry.status == 'Quoted' and @enquiry.user_id == current_user.id %>
                     <%= link_to( 'Deal' , deal_customer_enquiry_path(@enquiry, deal: true), method: :put, class: 'btn btn-primary') %>
                     <%= link_to( 'No-Deal' , deal_customer_enquiry_path(@enquiry, deal: false), method: :put, class: 'btn btn-danger') %>
                 <%- end %>
