--- a/app/views/customer/enquiries/show.html.erb
+++ b/app/views/customer/enquiries/show.html.erb
@@ -25,13 +25,13 @@
             </div>
             <div class="col-sm-12">
               <div class="product-detail">
-                <h4>From:</h4>
+                <h4>Enquiry From:</h4>
                 <p><%= @enquiry.start_at.strftime(time_format) %></p>
               </div>
             </div>
             <div class="col-sm-12">
               <div class="product-detail">
-                <h4>To:</h4>
+                <h4>Enquiry To:</h4>
                 <p><%= @enquiry.end_at.strftime(time_format) %></p>
               </div>
             </div>
@@ -115,13 +115,13 @@
             </div>
             <div class="col-sm-12">
               <div class="product-detail">
-                <h4>From:</h4>
+                <h4>Enquiry From:</h4>
                 <p><%= @enquiry.start_at.strftime(time_format) %></p>
               </div>
             </div>
             <div class="col-sm-12">
               <div class="product-detail">
-                <h4>To:</h4>
+                <h4>Enquiry To:</h4>
                 <p><%= @enquiry.end_at.strftime(time_format) %></p>
               </div>
             </div>
