--- a/app/views/customer/welcome/dashboard.html.erb
+++ b/app/views/customer/welcome/dashboard.html.erb
@@ -25,15 +25,39 @@
             eventLimit: true, // allow "more" link when too many events
 //            eventColor: 'red',
             events: [
-                <% @advertisements.each do |advertisement| %>
-                {
-                    title: "<%= advertisement.title %>",
-                    start: "<%= advertisement.start_at %>",
-                    end: "<%= advertisement.end_at %>",
-                    description: "<%= advertisement.description %>",
+                <%# @advertisements.each do |advertisement| %>
+//                {
+//                    title: "<%#= advertisement.title %>",
+//                    start: "<%#= advertisement.start_at %>",
+//                    end: "<%#= advertisement.end_at %>",
+//                    description: "<%#= advertisement.description %>",
 //                    color: "red",
-                    url: "<%= customer_advertisement_path(advertisement) %>"
+//                    url: "<%#= customer_advertisement_path(advertisement) %>"
+//                },
+                <%# end %>
+                <% if @enquiries[:product_enquiries].any? %>
+                <% @enquiries[:product_enquiries].each do |product_enquiry| %>
+                {
+                    title: "<%= product_enquiry.product.name %>",
+                    start: "<%= product_enquiry.start_at.utc %>",
+                    end: "<%= product_enquiry.end_at %>",
+                    description: "<%= product_enquiry.expected_price %>",
+                    color: "#0fa688",
+                    url: "<%= customer_enquiry_path(product_enquiry) %>"
                 },
+                <% end %>
+                <% end %>
+                <% if @enquiries[:service_enquiries].any? %>
+                <% @enquiries[:service_enquiries].each do |service_enquiry| %>
+                {
+                    title: "<%= service_enquiry.service.service_description %>",
+                    start: "<%= service_enquiry.start_at %>",
+                    end: "<%= service_enquiry.end_at %>",
+                    description: "<%= service_enquiry.expected_price %>",
+                    color: "#ff8e18",
+                    url: "<%= customer_enquiry_path(service_enquiry) %>"
+                },
+                <% end %>
                 <% end %>
             ]
         });
